# GenAIPlaybook

./: function_vs_tool_calling.ipynb
ai_agents_langgraph/: langchain_agent_lession_2.ipynb
langChainPlaybook/: README.md  langchain_101.ipynb  pyproject.toml
notebooks/unit2/smolagents/: multiagent_notebook.ipynb  retrieval_agents.ipynb
